read through DICS. Tara done

--- a/MNEPython/DICS.ipynb
+++ b/MNEPython/DICS.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Using beamforming to localize oscillatory power modulations\n",
     "\n",
-    "The aim of this section is to localize the modulations of oscillatory power. The will be done using the Dynamical Imaging of Coherent Sources (DICS) approach (Gross et al, 2001). This is a beamforming methodology based on spatial filtering operating in the frequency domain. For each grid point in the brain, a spatial filter is derived based on the forward model and the cross-spectral density (CSD) matrix. A multitaper approach is applied for the spectral estimates.\n",
-    "The approach allows for estimating the power modulations at each grid points which then is mapped onto the indiviual structural MRIs. Prewhitening of the data allows for combining the information from the gradiometers and the magnetomers \n",
+    "The aim of this section is to localize the modulations of oscillatory power. This will be done using the Dynamical Imaging of Coherent Sources (DICS) approach (Gross et al, 2001). This is a beamforming methodology based on spatial filtering operating in the frequency domain. For each grid point in the brain, a spatial filter is derived based on the forward model and the cross-spectral density (CSD) matrix. A multitaper approach is applied for the spectral estimates.\n",
+    "The approach allows for estimating the power modulations at each grid points which then is mapped onto the indiviual structural MRIs. Prewhitening of the data allows for combining the information from the gradiometers and the magnetomers.\n",
     "\n",
     "\n",
     "## Preparation\n",
@@ -268,8 +268,8 @@
     "\n",
     "### Derive the spatial filters for the alpha band\n",
     "\n",
-    "Now calculate the filters using the forward model (*fwd*) and the combined CSD matrix (*csd_common*). The filters are regularized corresponding to loading the diagonal of the covariance matrix with 5% of the sensor power. For each source the orientation is optimized to maximize the power of the output. Defining *noise_csd* serve to perform spatial prewhitening of the data (Sekihara et al. 2008, Engemann and Gramfort 2015, Westner et al. 2021). We here do this using data from the pre-stimulus interval; however, empty room data could be used as well.  As a result the magnetometer and gradiometer signals are uncorrelated to each other but have the same variance. Since the whitening is done separately for the magnetometers and gradiometers, the scale difference between the scale disappears allowing for the data from the two sensor types to be combined. The compensentation for depth bias is set (*depth = 0*) as condition or intervals will be compared. The relative comparisons alleviate depth bias. The *mean* in *csd_common.mean()* serves to average the CSDs over frequencies. Given that the covariance (or CSD) are severely rank-deficient due to the application of SSS and ICA, MNE-Python automatically computes a truncated pseudo-inverse using the rank calculated above. For the data ($X$) with rank $k$ the truncated pseudo-inverse ($X^\\dagger$) is calculated using singular value decomposition $ X = U \\Sigma V^T$ ; $X^\\dagger = V \\Sigma^{-1}_k U^T$\n",
-    "where we consider the first $k$ diagonal values of $\\Sigma$ as well as the first $k$ columns of $U$ and $V$.  This allows for the DISC algorithm is effectively applied in a virtual channel space of size *rank* (= 69 in this case) and no further regularization is required (reg = 0)."
+    "Now calculate the filters using the forward model `fwd` and the combined CSD matrix `csd_common`. The filters are regularized corresponding to loading the diagonal of the covariance matrix with 5% of the sensor power. For each source the orientation is optimized to maximize the power of the output. Defining *noise_csd* serves to perform spatial prewhitening of the data (Sekihara et al. 2008, Engemann and Gramfort 2015, Westner et al. 2021). We here do this using data from the pre-stimulus interval; however, empty room data could be used as well. As a result the magnetometer and gradiometer signals are uncorrelated to each other but have the same variance. Since the whitening is done separately for the magnetometers and gradiometers, the scale difference between the scale disappears allowing for the data from the two sensor types to be combined. The compensentation for depth bias is set `depth = 0` as condition or intervals will be compared. The relative comparisons alleviate depth bias. The `mean` in `csd_common.mean()` serves to average the CSDs over frequencies. Given that the covariance (or CSD) are severely rank-deficient due to the application of SSS and ICA, MNE-Python automatically computes a truncated pseudo-inverse using the rank calculated above. For the data ($X$) with rank $k$ the truncated pseudo-inverse ($X^\\dagger$) is calculated using singular value decomposition $ X = U \\Sigma V^T$ ; $X^\\dagger = V \\Sigma^{-1}_k U^T$\n",
+    "where we consider the first $k$ diagonal values of $\\Sigma$ as well as the first $k$ columns of $U$ and $V$.  This allows that the DISC algorithm is effectively applied in a virtual channel space of size `rank` (= 69 in this case) and no further regularization is required (`reg = 0`)."
    ]
   },
   {
@@ -302,8 +302,6 @@
     }
    ],
    "source": [
-    "#afilters = make_dics(epochs.info, fwd, csd_acommon.mean() , noise_csd=csd_anoise.mean(), \n",
-    "#                    reg=0, pick_ori='max-power', reduce_rank=True, real_filter=True, rank=rank, depth = 0)\n",
     "afilters = make_dics(epochs.info, fwd, csd_acommon.mean() , noise_csd=csd_anoise.mean(), \n",
     "                    reg=0, pick_ori='max-power', reduce_rank=True, real_filter=True, rank=rank, depth = 0)"
    ]
@@ -355,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the changed in relative power for comparing the right versus left attention condutions during the moving gratings interval:"
+    "Calculate the change in relative power for comparing the right versus left attention conditions during the moving gratings interval:"
    ]
   },
   {
@@ -458,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The sources in the posterior areas reflect the modulation of the alpha band activity when the partipant in attention to the right versus left moving gratings. The right orange island reflects the well-known ipsi-lateral reflective increase in alpha band power.  "
+    "The sources in the posterior areas reflect the modulation of the alpha band activity when the partipant is attending to the right versus left moving gratings. The right orange island reflects the well-known ipsi-lateral reflective increase in alpha band power.  "
    ]
   },
   {
@@ -467,7 +465,7 @@
    "source": [
     "**Question 1** Plot the DISC output (of e.g. *stc_aright_act*) on the MRI prior to doing a comparision. Interpret the outcome.\n",
     "\n",
-    "**Question 2** Change the rank of the data when calculating the filter to 100: *rank={'meg':100}*. How does it affect the outcome? \n"
+    "**Question 2** Change the rank of the data when calculating the filter to 100: `rank={'meg':100}`. How does it affect the outcome? \n"
    ]
   },
   {
@@ -577,7 +575,7 @@
    "source": [
     "### Apply the filters and plot the gamma modulation\n",
     "\n",
-    "The filters are then applied"
+    "The filters are then applied:"
    ]
   },
   {
@@ -670,7 +668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the navitation to move to visual cortex. \n",
+    "Use the navigation to move to visual cortex. \n",
     "The increase of the gamma activity is correclty localized in early visual cortex along the calcarine sulcus.  \n",
     "\n",
     "To illustrate the modulation in gamma band activity with attention write: "
