--- a/MNEPython/headmodel.ipynb
+++ b/MNEPython/headmodel.ipynb
@@ -540,7 +540,7 @@
    "id": "88360698",
    "metadata": {},
    "source": [
-    "Here it is important to check that the fiducial points by the nasium and the preauriculars are well placed. \n",
+    "Here it is important to check that the fiducial points by the nasion and the preauriculars are well placed. \n",
     "\n",
     "## Computing the sources according to the BEM model\n",
     "\n",
@@ -623,7 +623,7 @@
    "id": "acbe366f",
    "metadata": {},
    "source": [
-    "and then save it "
+    "and then save it:"
    ]
   },
   {
@@ -698,7 +698,7 @@
     "\n",
     "## Construting the forward model\n",
     "\n",
-    "The last step is to construct the forward model by assigning a lead-field to each source location in relation to the head position with respect to the sensors.  This will result in the lead-field matrix (*fwd*) "
+    "The last step is to construct the forward model by assigning a lead-field to each source location in relation to the head position with respect to the sensors.  This will result in the lead-field matrix (*fwd*)."
    ]
   },
   {
