typos, removed ann from conditions

--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "# 1. Follow these instructions if you are downloading the data direction from openneuro:\n",
+    "# 1. Follow these instructions if you are downloading the data directly from openneuro:\n",
     "\n",
     "dataset = 'ds004346'  # dataset ID in openneuro\n",
     "\n",
@@ -308,7 +308,7 @@
     "**Question 2:** What is the purpose of 0.1 Hz highpass-filter?\n",
     "\n",
     "\n",
-    "The data object (*data1*) allows for a simple inspection of the data by calculating the spectra:"
+    "The data object (`raw1`) allows for a simple inspection of the data by calculating the spectra:"
    ]
   },
   {
