--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -75,7 +75,7 @@
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix='meg', extension='.fif', root=bids_root)\n",
     "\n",
-    "deriv_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing'  # output path\n",
+    "deriv_root = op.join(bids_root, 'derivatives/preprocessing')  # output path\n",
     "\n",
     "deriv_path = BIDSPath(subject=subject, session=session, datatype='meg',\n",
     "            task=task, run=run, suffix='meg', root=deriv_root).mkdir()\n",
