--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_25525/2713253147.py:4: DeprecationWarning: \n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_51367/2713253147.py:4: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -73,14 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif\n"
+      "/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n",
+      "/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/analysis/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-12_epo.fif\n"
      ]
     }
    ],
@@ -91,7 +92,6 @@
     "run = '01'\n",
     "meg_suffix = 'meg'\n",
     "ica_suffix = 'ica'\n",
-    "ann_suffix = 'ann'\n",
     "epo_suffix = 'epo'\n",
     "\n",
     "preproc_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing'\n",
@@ -105,15 +105,11 @@
     "            task=task, run=run, suffix=epo_suffix, datatype='meg',\n",
     "            root=deriv_root, extension='.fif', check=False).mkdir()\n",
     "\n",
-    "ann_fname = bids_path_preproc.basename.replace(ica_suffix, ann_suffix) # output filename\n",
-    "\n",
-    "ann_fname_1 = op.join(bids_path_preproc.directory, ann_fname)\n",
-    "ann_fname_2 = ann_fname_1.replace('run-01', 'run-02')\n",
-    "\n",
     "deriv_file = bids_path.basename.replace('run-01', 'run-12')  # run 12 -> run 01 concatenated with run 02\n",
     "deriv_fname = op.join(bids_path.directory, deriv_file)\n",
     "\n",
-    "print(ann_fname_1)"
+    "print(bids_path_preproc.fpath)\n",
+    "print(deriv_fname)"
    ]
   },
   {
@@ -175,11 +171,9 @@
    ],
    "source": [
     "# This section only runs on run=01 for illustration purposes\n",
-    "bids_path_preproc.update(run='01')\n",
     "raw = read_raw_bids(bids_path=bids_path_preproc, \n",
     "            extra_params={'preload':False},\n",
-    "            verbose=True)\n",
-    "               \n"
+    "            verbose=True)"
    ]
   },
   {
