updating on bids_conversion

--- a/MNEPython/bids_conversion.ipynb
+++ b/MNEPython/bids_conversion.ipynb
@@ -11,8 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import mne\n",
-    "from mne_bids import (BIDSPath, write_raw_bids, read_raw_bids, \n",
-    "                      write_meg_calibration, write_meg_crosstalk, \n",
+    "from mne_bids import (BIDSPath, write_raw_bids, read_raw_bids,    # 'BIDSPath is the bids path object'\n",
+    "                      write_meg_calibration, write_meg_crosstalk,  # 'MNE-BIDS’s working horse for file and folder operations.'\n",
     "                      get_anat_landmarks, write_anat)"
    ]
   },
@@ -28,7 +28,7 @@
     "task = 'SpAtt'  # name of the task\n",
     "\n",
     "# specify specific file names\n",
-    "MEG_data_root = r'Z:\\Projects\\FLUX\\MEG_data'  # RDS folder for MEG data\n",
+    "MEG_data_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data'  # path to MEG data\n",
     "bids_root = op.join(MEG_data_root, 'BIDS-data')\n",
     "file_extension = '.fif'\n",
     "\n",
@@ -122,11 +122,12 @@
     "# MRI bids conversion\n",
     "\"\"\" using the trans file created by coregistration, we now convert T1W MRI file \n",
     "to bids format\"\"\"\n",
-    "run = '01'\n",
+    "\n",
+    "run = '12'\n",
     "\n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "                     task=task, run=run, root=bids_root)\n",
-    "MRI_data_root = r'Z:\\Projects\\FLUX\\MRI_data'  # RDS folder for trans file\n",
+    "MRI_data_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/sub-01/ses-01/anat'  # path to trans file\n",
     "trans_fname = op.join(MRI_data_root, 'trans.fif')\n",
     "fs_sub_dir = op.join(MRI_data_root, 'T1_anon_defaced')  # FreeSurfer directory for this subject #needs modifications\n",
     "fs_sub = 'sub-01'\n",
