fixed the lable of components based on the most recent run

--- a/MNEPython/ICA.ipynb
+++ b/MNEPython/ICA.ipynb
@@ -386,12 +386,12 @@
     "Use the left/right arrow-keys to scroll through the data and the up/down arrow-keys to scroll through the components. Right-click on the IC names to see the corrisponding topographies and other details.\n",
     "\n",
     "\n",
-    "When inspecting the traces, it is clear that ICA000 and ICA001 reflect eye-blinks as measured most strongly. Component ICA014 reflects saccades. Finally, ICA024 reflects the ECG.\n",
+    "When inspecting the traces, it is clear that ICA000 and ICA001 reflect eye-blinks as measured most strongly. Component ICA015 reflects saccades. Finally, ICA023 reflects the ECG.\n",
     "This order of ICA components is specific to this data set and the seed (*random_state*) used for the ICA decomposition. For other data sets or using a different seed the components will come in a different order. Therefore the components associated with artefacts have to be identified manually.\n",
     "\n",
     "**Question 1:** Estimate the frequency of the heart rate\n",
     "\n",
-    "**Question 2:** Identify the saccades in EOG014\n",
+    "**Question 2:** Identify the saccades in ICA015\n",
     "\n",
     "\n",
     "To show the topographies of the each of the ICA components write:"
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These plots show the topography associated with the magnetometers as they are more straightforward to interpret. The topography of ICA000 and ICA001 look like a classical eye-blink artefacts with strong activity over frontal left and right sensors of opposite polarity. The frontal negativity of ICA011 is associated with saccades. ICA022 looks like a typical ECG artefact as observed by the strong activity in the rim sensors stemming from the magnetic field circling the heart.\n",
+    "These plots show the topography associated with the magnetometers as they are more straightforward to interpret. The topography of ICA000 and ICA001 look like a classical eye-blink artefacts with strong activity over frontal left and right sensors of opposite polarity. The frontal negativity of ICA015 is associated with saccades. ICA023 looks like a typical ECG artefact as observed by the strong activity in the rim sensors stemming from the magnetic field circling the heart.\n",
     "\n",
     "How many components should in general be removed? As a rule of thumb not more than a handful. Typically only remove components which clearly reflect a physiological artefact. Removing too many components might remove brain activity as well.\n",
     "\n",
